Remove unsupported env variables and update workflow image

--- a/.github/workflows/package_and_release.yml
+++ b/.github/workflows/package_and_release.yml
@@ -6,47 +6,43 @@ on:
     tags:
       - 'v*.*.*'
 
-env:
-  RELEASE_VERSION: ${GITHUB_REF#refs/*/}
-  ANKI_ADDON_PACKAGE: ruzu_popups-${GITHUB_REF#refs/*/}.ankiaddon
-
 jobs:
   package:
     name: Package source code into .ankiaddon file
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Package code
-        run: cd ruzu_popups && zip -r ../${ANKI_ADDON_PACKAGE} *
+        run: cd ruzu_popups && zip -r ../ruzu_popups-${GITHUB_REF#refs/*/}.ankiaddon *
       - name: Upload site content
         uses: actions/upload-artifact@v2
         with:
           name: ruzu_popups-${{ github.event.release.tag_name }}.ankiaddon
-          path: ruzu_popups/${ANKI_ADDON_PACKAGE}
+          path: ruzu_popups/ruzu_popups-${GITHUB_REF#refs/*/}.ankiaddon
   release:
     name: Create release with packaged addon attached
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     needs: package
     steps:
       - name: Download .ankiaddon file
         uses: actions/download-artifact@v2
         with:
-          name: ${ANKI_ADDON_PACKAGE}
+          name: ruzu_popups-${GITHUB_REF#refs/*/}.ankiaddon
       - name: Create GitHub release
         id: create-release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${RELEASE_VERSION}
-          release_name: Release ${RELEASE_VERSION}
+          tag_name: ${GITHUB_REF#refs/*/}
+          release_name: Release ${GITHUB_REF#refs/*/}
       - name: Upload asset to GitHub release
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create-release.outputs.upload_url }}
-          asset_path: ./${ANKI_ADDON_PACKAGE}
-          asset_name: ${ANKI_ADDON_PACKAGE}
+          asset_path: ./ruzu_popups-${GITHUB_REF#refs/*/}.ankiaddon
+          asset_name: ruzu_popups-${GITHUB_REF#refs/*/}.ankiaddon
           asset_content_type: application/zip
