--- a/.github/workflows/package_and_release.yml
+++ b/.github/workflows/package_and_release.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Upload site content
         uses: actions/upload-artifact@v2
         with:
-          name: ruzu_popups-${{ github.event.release.tag_name }}.ankiaddon
-          path: ruzu_popups/ruzu_popups-${GITHUB_REF#refs/*/}.ankiaddon
+          name: ruzu_popups-${GITHUB_REF#refs/*/}.ankiaddon
+          path: ruzu_popups-${GITHUB_REF#refs/*/}.ankiaddon
   release:
     name: Create release with packaged addon attached
     runs-on: ubuntu-20.04
@@ -43,6 +43,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create-release.outputs.upload_url }}
-          asset_path: ./ruzu_popups-${GITHUB_REF#refs/*/}.ankiaddon
+          asset_path: ruzu_popups-${GITHUB_REF#refs/*/}.ankiaddon
           asset_name: ruzu_popups-${GITHUB_REF#refs/*/}.ankiaddon
           asset_content_type: application/zip
