--- a/.github/workflows/package_and_release.yml
+++ b/.github/workflows/package_and_release.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Get Release version
         run: echo ::set-output name=RELEASE_VERSION::${GITHUB_REF/refs\/tags\//}
       - name: Package code
-        run: cd ruzu_popups && zip -r ../ruzu_popups-${RELEASE_VERSION}.ankiaddon *
+        run: echo ${GITHUB_REF} echo ${GITHUB_REF/refs\/tags\//} && echo $RELEASE_VERSION && echo ${RELEASE_VERSION} && echo ruzu_popups-${RELEASE_VERSION}.ankiaddon *
       - name: Upload site content
         uses: actions/upload-artifact@v2
         with:
