Test with * in path

--- a/.github/workflows/package_and_release.yml
+++ b/.github/workflows/package_and_release.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: ruzu_popups-${GITHUB_REF/refs\/tags\//}.ankiaddon
-          path: ../ruzu_popups-${GITHUB_REF/refs\/tags\//}.ankiaddon
+          path: ruzu_popups-*.ankiaddon
           if-no-files-found: error
   release:
     name: Create release with packaged addon attached
