--- a/.github/workflows/package_and_release.yml
+++ b/.github/workflows/package_and_release.yml
@@ -10,16 +10,18 @@ jobs:
   package:
     name: Package source code into .ankiaddon file
     runs-on: ubuntu-20.04
+    env:
+      RELEASE_VERSION: ${GITHUB_REF/refs\/tags\//}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Package code
-        run: echo ${GITHUB_REF/refs\/tags\//} && echo ../ruzu_popups-${GITHUB_REF/refs\/tags\//}.ankiaddon && cd ruzu_popups && zip -r ../ruzu_popups-${GITHUB_REF/refs\/tags\//}.ankiaddon *
+        run: echo ${{ env.RELEASE_VERSION }} && echo ../ruzu_popups-${{ env.RELEASE_VERSION }}.ankiaddon && cd ruzu_popups && zip -r ../ruzu_popups-${{ env.RELEASE_VERSION }}.ankiaddon *
       - name: Upload site content
         uses: actions/upload-artifact@v2
         with:
-          name: ruzu_popups-${GITHUB_REF/refs\/tags\//}.ankiaddon
-          path: ruzu_popups-*.ankiaddon
+          name: ruzu_popups-${{ env.RELEASE_VERSION }}.ankiaddon
+          path: ruzu_popups-${{ env.RELEASE_VERSION }}.ankiaddon
           if-no-files-found: error
   release:
     name: Create release with packaged addon attached
