--- a/.github/workflows/package_and_release.yml
+++ b/.github/workflows/package_and_release.yml
@@ -12,16 +12,17 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Set RELEASE_VERSION
+        id: set_release_version
         run: echo ::set-output name=RELEASE_VERSION::${GITHUB_REF/refs\/tags\//}
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Package code
-        run: echo ${{ env.RELEASE_VERSION }} && echo ../ruzu_popups-${{ env.RELEASE_VERSION }}.ankiaddon && cd ruzu_popups && zip -r ../ruzu_popups-${{ env.RELEASE_VERSION }}.ankiaddon *
+        run: echo ${{ steps.set_release_version.outputs.VERSION }} && echo ../ruzu_popups-${{ steps.set_release_version.outputs.VERSION }}.ankiaddon && cd ruzu_popups && zip -r ../ruzu_popups-${{ steps.set_release_version.outputs.VERSION }}.ankiaddon *
       - name: Upload site content
         uses: actions/upload-artifact@v2
         with:
-          name: ruzu_popups-${{ env.RELEASE_VERSION }}.ankiaddon
-          path: ruzu_popups-${{ env.RELEASE_VERSION }}.ankiaddon
+          name: ruzu_popups-${{ steps.set_release_version.outputs.VERSION }}.ankiaddon
+          path: ruzu_popups-${{ steps.set_release_version.outputs.VERSION }}.ankiaddon
           if-no-files-found: error
   release:
     name: Create release with packaged addon attached
