--- a/.github/workflows/package_and_release.yml
+++ b/.github/workflows/package_and_release.yml
@@ -12,17 +12,17 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Set RELEASE_VERSION
-        id: set_release_version
-        run: echo ::set-output name=RELEASE_VERSION::${GITHUB_REF/refs\/tags\//}
+        id: get_tag
+        run: echo ::set-output name=VER::${{ steps.get_tag.outputs.VER }}
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Package code
-        run: echo ${{ steps.set_release_version.outputs.RELEASE_VERSION }} && echo ../ruzu_popups-${{ steps.set_release_version.outputs.RELEASE_VERSION }}.ankiaddon && cd ruzu_popups && zip -r ../ruzu_popups-${{ steps.set_release_version.outputs.RELEASE_VERSION }}.ankiaddon *
+        run: echo ${{ steps.get_tag.outputs.VER }} && echo ../ruzu_popups-${{ steps.get_tag.outputs.VER }}.ankiaddon && cd ruzu_popups && zip -r ../ruzu_popups-${{ steps.get_tag.outputs.VER }}.ankiaddon *
       - name: Upload site content
         uses: actions/upload-artifact@v2
         with:
-          name: ruzu_popups-${{ steps.set_release_version.outputs.RELEASE_VERSION }}.ankiaddon
-          path: ruzu_popups-${{ steps.set_release_version.outputs.RELEASE_VERSION }}.ankiaddon
+          name: ruzu_popups-${{ steps.get_tag.outputs.VER }}.ankiaddon
+          path: ruzu_popups-${{ steps.get_tag.outputs.VER }}.ankiaddon
           if-no-files-found: error
   release:
     name: Create release with packaged addon attached
@@ -32,21 +32,21 @@ jobs:
       - name: Download .ankiaddon file
         uses: actions/download-artifact@v2
         with:
-          name: ruzu_popups-${GITHUB_REF/refs\/tags\//}.ankiaddon
+          name: ruzu_popups-${{ steps.get_tag.outputs.VER }}.ankiaddon
       - name: Create GitHub release
         id: create-release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${GITHUB_REF/refs\/tags\//}
-          release_name: Release ${GITHUB_REF/refs\/tags\//}
+          tag_name: ${{ steps.get_tag.outputs.VER }}
+          release_name: Release ${{ steps.get_tag.outputs.VER }}
       - name: Upload asset to GitHub release
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create-release.outputs.upload_url }}
-          asset_path: ruzu_popups-${GITHUB_REF/refs\/tags\//}.ankiaddon
-          asset_name: ruzu_popups-${GITHUB_REF/refs\/tags\//}.ankiaddon
+          asset_path: ruzu_popups-${{ steps.get_tag.outputs.VER }}.ankiaddon
+          asset_name: ruzu_popups-${{ steps.get_tag.outputs.VER }}.ankiaddon
           asset_content_type: application/zip
