--- a/ruzu_popups/manifest.json
+++ b/ruzu_popups/manifest.json
@@ -2,6 +2,7 @@
     "package": "ruzu_pop_ups",
     "name": "Ruzu Pop-ups",
     "mod": <MOD>,
-    "author": "Ruzu Studios",
+    "min_point_version": 28,
+    "max_point_version": 35,
     "human_version": "<VERSION>"
 }
