Add 'click to reveal' option and automatically end review when card is not being displayed for more accurate review stats https://docs.ankiweb.net/#/deck-options?id=general

--- a/ruzu_popups/config.json
+++ b/ruzu_popups/config.json
@@ -2,6 +2,7 @@
     "deck": "Default",
     "frequency": 5,
     "enabled": false,
+    "click_to_reveal": false,
     "window_location": "bottom_right",
     "show_marked_card_flag": false
 }
