Fix qt6 compatibility issue

--- a/.github/workflows/package_and_release.yml
+++ b/.github/workflows/package_and_release.yml
@@ -23,7 +23,7 @@ jobs:
           sed -i "s/<VERSION>/${{ steps.get_tag.outputs.VER }}/g" manifest.json
       - name: Package code
         run: cd ruzu_popups && zip -r ../ruzu_popups-${{ steps.get_tag.outputs.VER }}.ankiaddon *
-      - name: Upload site content
+      - name: Upload addon
         uses: actions/upload-artifact@v2
         with:
           name: ruzu_popups-${{ steps.get_tag.outputs.VER }}.ankiaddon
